# Nari

./: Cargo.toml  README.md
nari/: Cargo.toml  LICENSE  README.md
nari/examples/: basic_usage.rs
nari/src/: lib.rs
nari/src/models/: database.rs  event.rs  id.rs  mod.rs  user.rs
nyari/: Cargo.toml
nyari/src/: main.rs
nyari/src/commands/: status.rs
src/: lib.rs
