[package]
name = "nari"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ]}
tokio = { version = "1.25", features = [ "rt", "time", "sync" ]}
ron = "0.8"
notify = { version = "5.1", default-features = false }
