[package]
name = "nyari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serenity = { version = "0.11" }
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.15" }